# RaychelMath

./: .clang-tidy  .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  README.md  RaychelMathConfig.cmake
cmake/: find_dependencies.cmake
include/RaychelMath/: Quaternion.h  Transform.h  Tuple.h  TupleBase.h  color.h  concepts.h  constants.h  equivalent.h  forward.h  math.h  vec2.h  vec3.h  vector.h
include/RaychelMath/Impl/: QuaternionImpl.inl  TransformImpl.inl  colorImpl.inl  vec2Impl.inl  vec3Impl.inl  vectorImpl.inl
src/: CMakeLists.txt
test/: CMakeLists.txt  Quaternion.test.cpp  Tuple.test.cpp  color.test.cpp  concepts.test.cpp  floating_equality.test.cpp  vec2.test.cpp  vec3.test.cpp  vector.test.cpp
